--- a/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
+++ b/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
@@ -423,7 +423,7 @@
                 <div class="modal-header">
                     <h5 class="modal-title">Plan <span id="create-weekly-plans-number-of-lessons"></span>
                         <span data-subject-name="" id="create-weekly-plans-lesson-subject-name"></span>
-                        Lesson(s)
+                        Lesson(s) for the week
                         <br>
                         <div id="create-weekly-plans-lessons-summaries"></div>
                     </h5>
@@ -434,47 +434,63 @@
                 </div>
                 <div class="modal-body">
 
+                    <div id="es-and-os-and-benchmarks-summary"></div>
+
                     for each lesson, generate below
 
                     <div class="row">
                         <button class="btn btn-sm btn-success create-weekly-plans-add-to-lesson-button">
-                            Add Activity
+                            <svg version="1.1" width="16" height="16" viewBox="0 0 24 24" class="octicon octicon-plus" aria-hidden="true">
+                                <use xlink:href="#plus" /></svg>
+                            Activity
                         </button>
                     </div>
                     <div class="row">
                         <button class="btn btn-sm btn-success create-weekly-plans-add-to-lesson-button">
-                            Add Resource
+                            <svg version="1.1" width="16" height="16" viewBox="0 0 24 24" class="octicon octicon-plus" aria-hidden="true">
+                                <use xlink:href="#plus" /></svg>
+                            Resource
                         </button>
                     </div>
                     <div class="row">
                         <button class="btn btn-sm btn-success create-weekly-plans-add-to-lesson-button">
-                            Add Learning Intention
+                            <svg version="1.1" width="16" height="16" viewBox="0 0 24 24" class="octicon octicon-plus" aria-hidden="true">
+                                <use xlink:href="#plus" /></svg>
+                            Learning Intention
                         </button>
                     </div>
                     <div class="row">
                         <button class="btn btn-sm btn-success create-weekly-plans-add-to-lesson-button">
-                            Add Success Criteria
+                            <svg version="1.1" width="16" height="16" viewBox="0 0 24 24" class="octicon octicon-plus" aria-hidden="true">
+                                <use xlink:href="#plus" /></svg>
+                            Success Criteria
                         </button>
                     </div>
                     <div class="row">
                         <button class="btn btn-sm btn-success create-weekly-plans-add-to-lesson-button">
-                            Add Plenary
+                            <svg version="1.1" width="16" height="16" viewBox="0 0 24 24" class="octicon octicon-plus" aria-hidden="true">
+                                <use xlink:href="#plus" /></svg>
+                            Plenary
                         </button>
                     </div>
                     <div class="row">
                         <button class="btn btn-sm btn-success create-weekly-plans-add-to-lesson-button">
-                            Add Formative Assessment
+                            <svg version="1.1" width="16" height="16" viewBox="0 0 24 24" class="octicon octicon-plus" aria-hidden="true">
+                                <use xlink:href="#plus" /></svg>
+                            Formative Assessment
                         </button>
                     </div>
                     <div class="row">
                         <button class="btn btn-sm btn-success create-weekly-plans-add-to-lesson-button">
-                            Add Note
+                            <svg version="1.1" width="16" height="16" viewBox="0 0 24 24" class="octicon octicon-plus" aria-hidden="true">
+                                <use xlink:href="#plus" /></svg>
+                            Note
                         </button>
                     </div>
 
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-primary">Save Plan(s)</button>
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 </div>
             </div>
