--- a/server/app/views/planning/weekly/weeklyView.scala.html
+++ b/server/app/views/planning/weekly/weeklyView.scala.html
@@ -175,5 +175,9 @@
     </section>
 
 
+    <script>
+            localStorage.setItem("classId", "@classDetails.id.id");
+    </script>
+
     @scalajs.html.scripts("client", routes.Assets.versioned(_).toString, name => getClass.getResource(s"/public/$name") != null)
 }
