--- a/server/app/views/planning/weekly/_templateWeeklyPlanning.scala.html
+++ b/server/app/views/planning/weekly/_templateWeeklyPlanning.scala.html
@@ -24,7 +24,7 @@
     <div class="template-weekly-planning-mondays-in-term row d-flex justify-content-around">
         <span><svg version="1.1" width="24" height="24" viewBox="0 0 24 24" class="happy-smiley-end-of-term octicon octicon-rocket float-left" aria-hidden="true">
             <use xlink:href="#rocket" /></svg>
-            <span id="term-start-text" class="text-success">Term Start</span>
+            <span id="term-start-text" class="text-success">Go!</span>
         </span>
         @for((mondayInTerm, index) <- currentTerm.listOfAllMondaysInTerm().zipWithIndex) {
             @if(index == (weekNumber - 1) ||
@@ -36,7 +36,7 @@
                 data-is-currently-selected="true">
                     <small>Week of Monday
                     <br>
-                    @mondayInTerm.getDayOfMonth, @mondayInTerm.getMonth.toString.toLowerCase.capitalize
+                        @mondayInTerm.getDayOfMonth, @mondayInTerm.getMonth.toString.toLowerCase.capitalize
                     </small>
                 </button>
             } else {
@@ -51,7 +51,7 @@
             }
         }
         <span>
-            <span id="term-end-text" class="text-success">Term End</span>
+            <span id="term-end-text" class="text-success">Relax!</span>
             <svg version="1.1" width="24" height="24" viewBox="0 0 24 24" class="happy-smiley-end-of-term octicon octicon-smiley float-right" aria-hidden="true">
                 <use xlink:href="#smiley" /></svg>
         </span>
