--- a/server/public/stylesheets/weeklyplans-create-plan.css
+++ b/server/public/stylesheets/weeklyplans-create-plan.css
@@ -128,6 +128,7 @@
 /*}*/
 
 .create-weekly-plans-add-to-lesson-button {
+    color: white !important;
     margin-top: 1rem;
     margin-left: 2rem;
 }
