--- a/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
+++ b/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
@@ -423,7 +423,7 @@
                 <div class="modal-header">
                     <h5 class="modal-title">Plan <span id="create-weekly-plans-number-of-lessons"></span>
                         <span data-subject-name="" id="create-weekly-plans-lesson-subject-name"></span>
-                        Lesson(s) for the week
+                        Lesson(s) for the week <span id="create-weekly-plans-lesson-modal-week-of"></span>
                         <br>
                         <div id="create-weekly-plans-lessons-summaries"></div>
                     </h5>
@@ -436,15 +436,16 @@
 
                     <div id="es-and-os-and-benchmarks-summary"></div>
 
-                    for each lesson, generate below
-
+                    <div id="create-weekly-plans-add-to-lesson-button-add-activity-div" ></div>
                     <div class="row">
-                        <button class="btn btn-sm btn-success create-weekly-plans-add-to-lesson-button">
+                        <button id="create-weekly-plans-add-to-lesson-button-add-activity"
+                        class="btn btn-sm btn-success create-weekly-plans-add-to-lesson-button">
                             <svg version="1.1" width="16" height="16" viewBox="0 0 24 24" class="octicon octicon-plus" aria-hidden="true">
                                 <use xlink:href="#plus" /></svg>
                             Activity
                         </button>
                     </div>
+
                     <div class="row">
                         <button class="btn btn-sm btn-success create-weekly-plans-add-to-lesson-button">
                             <svg version="1.1" width="16" height="16" viewBox="0 0 24 24" class="octicon octicon-plus" aria-hidden="true">
