--- a/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
+++ b/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
@@ -446,43 +446,60 @@
                         </button>
                     </div>
 
+                    <div id="create-weekly-plans-add-to-lesson-button-add-resource-div" ></div>
                     <div class="row">
-                        <button class="btn btn-sm btn-success create-weekly-plans-add-to-lesson-button">
+                        <button id="create-weekly-plans-add-to-lesson-button-add-resource"
+                        class="btn btn-sm btn-success create-weekly-plans-add-to-lesson-button">
                             <svg version="1.1" width="16" height="16" viewBox="0 0 24 24" class="octicon octicon-plus" aria-hidden="true">
                                 <use xlink:href="#plus" /></svg>
                             Resource
                         </button>
                     </div>
+
+                    <div id="create-weekly-plans-add-to-lesson-button-add-learning-intention-div"></div>
                     <div class="row">
-                        <button class="btn btn-sm btn-success create-weekly-plans-add-to-lesson-button">
+                        <button id="create-weekly-plans-add-to-lesson-button-add-learning-intention"
+                        class="btn btn-sm btn-success create-weekly-plans-add-to-lesson-button">
                             <svg version="1.1" width="16" height="16" viewBox="0 0 24 24" class="octicon octicon-plus" aria-hidden="true">
                                 <use xlink:href="#plus" /></svg>
                             Learning Intention
                         </button>
                     </div>
+
+                    <div id="create-weekly-plans-add-to-lesson-button-add-success-criteria-div"></div>
                     <div class="row">
-                        <button class="btn btn-sm btn-success create-weekly-plans-add-to-lesson-button">
+                        <button id="create-weekly-plans-add-to-lesson-button-add-success-criteria"
+                        class="btn btn-sm btn-success create-weekly-plans-add-to-lesson-button">
                             <svg version="1.1" width="16" height="16" viewBox="0 0 24 24" class="octicon octicon-plus" aria-hidden="true">
                                 <use xlink:href="#plus" /></svg>
                             Success Criteria
                         </button>
                     </div>
+
+                    <div id="create-weekly-plans-add-to-lesson-button-add-plenary-div"></div>
                     <div class="row">
-                        <button class="btn btn-sm btn-success create-weekly-plans-add-to-lesson-button">
+                        <button id="create-weekly-plans-add-to-lesson-button-add-plenary"
+                        class="btn btn-sm btn-success create-weekly-plans-add-to-lesson-button">
                             <svg version="1.1" width="16" height="16" viewBox="0 0 24 24" class="octicon octicon-plus" aria-hidden="true">
                                 <use xlink:href="#plus" /></svg>
                             Plenary
                         </button>
                     </div>
+
+                    <div id="create-weekly-plans-add-to-lesson-button-add-formative-assessment-div"></div>
                     <div class="row">
-                        <button class="btn btn-sm btn-success create-weekly-plans-add-to-lesson-button">
+                        <button id="create-weekly-plans-add-to-lesson-button-add-formative-assessment"
+                        class="btn btn-sm btn-success create-weekly-plans-add-to-lesson-button">
                             <svg version="1.1" width="16" height="16" viewBox="0 0 24 24" class="octicon octicon-plus" aria-hidden="true">
                                 <use xlink:href="#plus" /></svg>
                             Formative Assessment
                         </button>
                     </div>
+
+                    <div id="create-weekly-plans-add-to-lesson-button-add-note-div"></div>
                     <div class="row">
-                        <button class="btn btn-sm btn-success create-weekly-plans-add-to-lesson-button">
+                        <button id="create-weekly-plans-add-to-lesson-button-add-note"
+                        class="btn btn-sm btn-success create-weekly-plans-add-to-lesson-button">
                             <svg version="1.1" width="16" height="16" viewBox="0 0 24 24" class="octicon octicon-plus" aria-hidden="true">
                                 <use xlink:href="#plus" /></svg>
                             Note
