--- a/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
+++ b/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
@@ -38,6 +38,9 @@
 @buildEsAndOsSection(plan: models.timetoteach.planning.pdf.CurriculumAreaTermlyPlanForPdf) = {
     <div class="create-weekly-plans-es-os-and-benchmarks-window">
 
+        <h5 class="text-center create-weekly-plans-sub-header text-info">
+            Select the Es & Os / Benchmarks you'll be covering this week for @ScottishCurriculumPlanningAreaWrapper(plan.planningArea).niceSubjectLevelValue()</h5>
+
         @for(esOsWithBenchmarks <- plan.eAndOsWithBenchmarks) {
             <div class="create-weekly-plans-subsection">
                 <div class="create-weekly-plans-subsection-header text-primary">
@@ -178,8 +181,6 @@
     <div class="container-fluid">
 
         <div class="create-weekly-plans-section">
-            <h5 class="text-center create-weekly-plans-sub-header text-info">
-                Select the Es & Os / Benchmarks you'll be covering this week</h5>
 
             <div class="create-weekly-plans-main-section">
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
@@ -246,12 +247,12 @@
                                 <div class="col-md-9 col-lg-10">
                                     <div class="tab-content" id="v-pills-tabContent">
                                     @for((termlyPlanForArea, indexTermlyPlanForArea) <- currentTermlyPlan.fullTermlyPlan(planningArea).sortBy(elem => elem.orderNumber).zipWithIndex) {
-
                                         @if(indexTermlyPlanForArea == 0) {
                                             @if(ScottishCurriculumPlanningAreaWrapper(termlyPlanForArea.planningArea).planAtGroupLevel) {
                                                 <div class="tab-pane fade show active" role="tabpanel"
                                                 id="v-pills-content-@termlyPlanForArea.planningArea.toString-@termlyPlanForArea.maybeGroup.get.groupName.name"
                                                 aria-labelledby="v-pills-tab-@termlyPlanForArea.planningArea.toString-@termlyPlanForArea.maybeGroup.get.groupName.name">
+
                                                 @buildEsAndOsSection(termlyPlanForArea)
                                                 </div>
                                             } else {
@@ -433,6 +434,8 @@
 
                 </div>
                 <div class="modal-body">
+
+                    <div id="create-weekly-plans-modal-body"></div>
 
                     <div id="es-and-os-and-benchmarks-summary"></div>
 
