--- a/server/public/stylesheets/weeklyplans-create-plan.css
+++ b/server/public/stylesheets/weeklyplans-create-plan.css
@@ -166,3 +166,8 @@
     margin-left: 1rem;
     margin-top: 1rem;
 }
+
+.the-weekly-plans-modal-content-section {
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+}
