--- a/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
+++ b/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
@@ -439,7 +439,7 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary">Save Plan(s)</button>
+                    <button id="create-weekly-plans-save-subject-plan" type="button" class="btn btn-primary">Save Plan(s)</button>
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 </div>
             </div>
