--- a/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
+++ b/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
@@ -423,8 +423,8 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">Plan <span id="create-weekly-plans-number-of-lessons"></span>
-                        <span data-subject-name="" id="create-weekly-plans-lesson-subject-name"></span>
-                        Lesson(s) for the week <span id="create-weekly-plans-lesson-modal-week-of"></span>
+                        <span data-subject-name="" id="create-weekly-plans-lesson-subject-name" class="text-success"></span>
+                        lesson(s) for the week <span id="create-weekly-plans-lesson-modal-week-of"></span>
                     </h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
