--- a/server/public/stylesheets/weeklyplans-create-plan.css
+++ b/server/public/stylesheets/weeklyplans-create-plan.css
@@ -162,6 +162,12 @@
     margin-right: 2rem;
 }
 
+.create-weekly-plans-lesson-modal-span-select-groups {
+    margin-top: 1rem;
+    margin-left: 1rem;
+    margin-right: 2rem;
+}
+
 .create-weekly-plans-lesson-modal-delete-this-row {
     margin-left: 1rem;
     margin-top: 1rem;
