--- a/server/public/stylesheets/weeklyplans-create-plan.css
+++ b/server/public/stylesheets/weeklyplans-create-plan.css
@@ -179,7 +179,7 @@
 }
 
 .create-weekly-plans-subject-done-check-green  {
-    color: green;
+    color: #00b000;
 }
 
 .weekly-plans-top-level-tab {
