--- a/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
+++ b/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
@@ -178,6 +178,13 @@
 
 @_templateWeeklyPlanning(handler, userPictureUri, userFirstName, userFamilyName, classDetails, CLASS_WEEKLY_PLANS, Some(CREATE_WEEKLY_PLAN), currentTerm, weekNumber, todaysDate) {
 
+    <div class="row d-flex justify-content-around">
+        <button id="back-to-weekly-view-button" type="button" class="btn btn-primary btn-lg">
+            Back To Weekly View
+        </button>
+    </div>
+
+
     <div class="container-fluid">
 
         <div class="create-weekly-plans-section">
